#4 feat: 회원이 가진 쿠폰 상태 변경 기능 추가